Added documentation and better error messages.